--- a/Coffee Shop Registration/appsettings.json
+++ b/Coffee Shop Registration/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:grandcircus-2022april.database.windows.net,1433;Initial Catalog=database1;Persist Security Info=False;User ID=Ahbc2022April1@davidluxfordoutlook.onmicrosoft.com;Password=ElectricKoala$Bear96;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Authentication=\"Active Directory Password\""
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
